// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioPlayer snapshot tests AudioPlayer is playing 1`] = `
Array [
  <button
    className="track__button track__button--pause"
    disabled={false}
    onClick={[Function]}
    type="button"
  />,
  <div
    className="track__status"
  >
    <audio
      src=""
    />
  </div>,
]
`;

exports[`AudioPlayer snapshot tests AudioPlayer is silent and loading 1`] = `
Array [
  <button
    className="track__button track__button--play"
    disabled={true}
    onClick={[Function]}
    type="button"
  />,
  <div
    className="track__status"
  >
    <audio
      src=""
    />
  </div>,
]
`;
